OBSR specific API info, fixed overflow

--- a/client/sass/_api.scss
+++ b/client/sass/_api.scss
@@ -84,6 +84,7 @@
 		display: inline-block;
 		overflow: hidden;
 		text-overflow: ellipsis;
+		white-space: nowrap;
 		width: 90%;
 	}
 
