--- a/client/sass/_card.scss
+++ b/client/sass/_card.scss
@@ -11,6 +11,8 @@
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 	border-radius: 5px;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 
 	&:hover {
 		box-shadow: 0 8px 14px rgba(0,0,0,0.20), 0 4px 4px rgba(0,0,0,0.18);
@@ -157,9 +159,9 @@
 		color: $green;
 	}
 
-	&--graph {
-    //graph specific
-	}
+	// &--graph {
+  //   //graph specific
+	// }
 
 	&--graph &__data-main {
 		font-size: 1.25em;
